Stop program archive images from squishing

--- a/themes/unya/sass/_page-programs.scss
+++ b/themes/unya/sass/_page-programs.scss
@@ -363,7 +363,7 @@
       background:
         linear-gradient(to bottom,rgba(66,99,171,0.7) 0%, rgba(66,99,171,0.7) 100%),
         url('../../assets/images/Julie.png') center / cover no-repeat;
-      }
+    }
   }
   
   article {
@@ -600,6 +600,17 @@
   display: flex;
   position: relative;
   height: 100%;
+  @include tablet {
+    .program-thumb {
+      min-width: 25rem;
+    }
+  }
+  @include desktop {
+    .program-thumb {
+      min-width: 33rem;
+    }
+  }
+
 }
 
 .program-item-footer-wrapper {
